# Harry-Potter-Network

./: .gitignore  1_scrape_characters.ipynb  2_add_characters_neo4j.ipynb  3_get_interactions.ipynb  4_add_interaction_neo4j.ipynb  5_add_metrics_neo4j.ipynb  5_add_overall_metrics_neo4j.ipynb  6_per_chapter_metric.ipynb  7_series_metrics.ipynb  README.md  pyproject.toml
backend/: 4_add_interaction_neo4j.ipynb
backend/data/processed/2/: graph.gexf
backend/data/processed/3/: chapter_characters.pkl
backend/data/processed/4/: graph.gexf
backend/data/processed/5/: graph.gexf
backend/data/processed/6/: interactions_by_chapter.pkl  (+1 more)
backend/src/hp_nlp_graph/: book.py  language.py  scraper.py
data/: chapter_characters.pkl  character_indices.csv  interactions_by_chapter.pkl  metrics.csv
data/processed/: removed_characters.csv
data/processed/1/: chapter_characters.pkl  metrics.csv
data/processed/2/: chapter_characters.pkl  interactions_by_chapter.pkl  metrics.csv
data/processed/3/: graph.gexf  interactions_by_chapter.pkl  metrics.csv
data/processed/4/: chapter_characters.pkl  interactions_by_chapter.pkl  metrics.csv
data/processed/5/: chapter_characters.pkl  interactions_by_chapter.pkl  metrics.csv
data/processed/6/: chapter_characters.pkl  graph.gexf
data/processed/7/: chapter_characters.pkl  graph.gexf  interactions_by_chapter.pkl  metrics.csv
data/processed/series/: graph.gexf  graph.json  metrics.csv
src/hp_nlp_graph/: bookgraph.py  coreference.py  graph.py  language.py  language_constants.py  neo4j.py  reference.py  scraper.py  utils.py
(+3 files in other folders)
